# socbench

./: .gitignore  PLAN.md  _commit_msg.txt  docker-compose.yml  fe.out  run_api.bat  run_fe.bat
backend/: Dockerfile  _import_training_results.py  _ranking_consistency.py  pyproject.toml  quick_smoke.py  reclass_tmp.py  seed_db.py  seed_log.txt  smoke_test.py  socbench.db
backend/socbench/: __init__.py  categories.py  cli.py  db.py  models.py  provenance.py  recommendations.py  runner.py  score.py
backend/socbench/api/: app.py  routes.py
backend/socbench/contamination/: checker.py
backend/socbench/discovery/: qualifier.py  scanner.py
backend/socbench/evals/: __init__.py  analysis.py  registry.py
backend/socbench/kaggle/: accounts.py  notebook.py  queue.py
backend/socbench/scoring/: __init__.py  base.py  code.py  dedup.py  format.py  language.py  pii.py  quality.py  tokens.py
backend/socbench/training/: config.py  data_prep.py  evaluate.py  trainer.py
backend/tests/: test_discovery.py  test_scoring.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/datasets/[id]/: page.tsx
frontend/src/app/discover/: page.tsx
frontend/src/app/evals/: page.tsx
frontend/src/app/trending/: page.tsx
kaggle/: train_socbench.ipynb
vibe/: .gitignore
