[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socbench"
version = "0.1.0"
description = "Scientific dataset quality benchmark with standardized metrics and training impact scores"
readme = "README.md"
license = "apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "HOLYKEYZ" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.9",
    "httpx>=0.26",
    "huggingface-hub>=0.20",
    "datasets>=2.16",
    "tiktoken>=0.5",
    "datasketch>=1.6",
    "fasttext-langdetect>=1.0",
    "presidio-analyzer>=2.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
train = [
    "torch>=2.2",
    "numpy>=1.26",
]

[project.scripts]
socbench = "socbench.cli:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
